--- a/.env.templates
+++ b/.env.templates
@@ -1,6 +1,12 @@
-PORT=3004
+PORT=3005
 
 
 # NATS ENVs
 NATS_SERVERS = "nats://localhost:4222"
 # NATS_SERVERS = "nats://localhost:4222,nats://localhost:4223,nats://localhost:4224"
+
+# Database ENVs
+DATABASE_URL='mongodb://auth-db:27017/authdb'
+
+# JWT ENVs
+JWT_SECRET= # Generate your own secret key
